--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-currency-formatter": "^1.1.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.1"
   }
 }
