--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-currency-formatter": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-responsive": "^9.0.0",
     "react-responsive-carousel": "^3.2.23",
